tests/expectations/compiler/array/nested_array_sum_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected an array but type `u32` was found.
    --> compiler-test:8:29
     |
   8 |                 sum = sum + a[i][j];
     |                             ^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected an array but type `u32` was found.
    --> compiler-test:8:29
     |
   8 |                 sum = sum + a[i][j];
     |                             ^^^^
